Update sso full flow

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,6 @@ JWT_SECRET=myjwtsecret
 # must be number, in unit of microsecond, exp: 2d =  172800000
 JWT_EXP=172800000
 
+JWT_PRIVATE_KEY=
+JWT_PUBLIC_KEY=
+
